# rlibc

./: .gitignore  Cargo.toml  Makefile  README.md  test.c
crt/x86_64-unknown-linux-gnu/: crt0.s
include/rlibc/: ctype.h  dlfcn.h  errno.h  fcntl.h  inttypes.h  libc.h  math.h  signal.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  utime.h  wchar.h  wctype.h
include/rlibc/arch/x86_64/: stdint.h
include/rlibc/sys/: mman.h  types.h
src/: lib.rs  math.rs
src/consts/: errno.rs  fcntl.rs  mod.rs
src/libc/: ctype.rs  errno.rs  mod.rs  stdio.rs  string.rs  time.rs
src/libc/stdio/: mod.rs  printf.rs
src/math/: mod.rs
src/posix/: dlfcn.rs  fcntl.rs  mm.rs  mod.rs  pm.rs  signal.rs  stdlib.rs  unistd.rs  utime.rs
src/rust/: alloc.rs  macros.rs  mod.rs  rand.rs
src/rust/x86_64/linux/: start.rs
src/rust/x86_64/macos/: start.rs
src/syscalls/: mod.rs
src/syscalls/linux/: x86_64.rs
src/types/: mod.rs
src/types/linux/: mod.rs  x86_64.rs
src/types/macos/: x86_64.rs
