[package]
name = "c"
version = "0.1.0"
authors = ["Alex Chandel <alexchandel@gmail.com>", "mahkoh <ju.orth@gmail.com>", "Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
libm = "0.2"
widestring = { version = "0.4", default-features = false, features = ["alloc"] }
cstrptr = { version = "0.1", default-features = false, features = ["alloc", "unstable"] }

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
